--- a/package.json
+++ b/package.json
@@ -8,13 +8,11 @@
     "build": "vite build",
     "preview": "vite preview"
   },
-  "dependencies": {
+  "dependencies": 
+  {
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "@google/generative-ai": "^0.21.0",
+    "lucide-react": "^0.453.0"
   },
-  "devDependencies": {
-    "@vitejs/plugin-react": "^4.3.0",
-    "vite": "^5.4.0",
-    "typescript": "^5.4.0"
-  }
-}
+
